--- a/OEBPS/Text/c022.xhtml
+++ b/OEBPS/Text/c022.xhtml
@@ -158,6 +158,7 @@
     <p>只是，有冷的同调。</p>
     <p>看到那种异样的生活方式，菲利克斯打心底里想。</p>
     <p>——这两个人不寻常。</p>
+    <p class="divline"></p>
     <p>伯恩哈特先生，你对菲利克斯的什么不满意？</p>
     <p>伯恩哈特“太认真太有常识了。他竟然是我的孩子啊”</p>
 </body>
