--- a/OEBPS/Text/c029.xhtml
+++ b/OEBPS/Text/c029.xhtml
@@ -126,7 +126,7 @@
     <p>他们拼命地从什么地方逃跑。</p>
     <p>“<span class="character">开什么玩笑！为什么有这样的平原！</span>”</p>
     <p>“<span class="character">知道吗！总之要向老师报告！</span>”</p>
-    <p>“<span class="character">吉克哈特先生落下了，可以吗！？</span>”</p>
+    <p>“<span class="character">吉克哈特大人落下了，可以吗！？</span>”</p>
     <p>“<span class="character">他说要自己留下来！很有自信吧！</span>”</p>
     <p>从听到的台词来看，总觉得与平原不相称的魔物出现，他们好像从那里逃了出来。</p>
     <p>而且吉克哈特好像被遗弃了。</p>
