--- a/OEBPS/Text/c033.xhtml
+++ b/OEBPS/Text/c033.xhtml
@@ -123,7 +123,7 @@
     <p>不久，他注意到了在与梅赛德斯不同的意义上被孤立的吉克哈特。</p>
     <p>吉克哈特与梅赛德斯相反，是因为大家都想组装，所以没有和任何人组队。</p>
     <p>在女学生们互相牵制中，汉娜坦然地闯了进去，隔着周围没有注意到的KY向吉克哈特打了招呼。</p>
-    <p>“<span class="character">吉克哈特先生，还没有和谁组过组吗？那么和我们组队吧！嗯，听说那个好！</span>”</p>
+    <p>“<span class="character">吉克哈特大人，还没有和谁组过组吗？那么和我们组队吧！嗯，听说那个好！</span>”</p>
     <p>汉娜这样说着，强行把吉克哈特带了过来。无法察觉出乎意料的空气。</p>
     <p>只能认为是故意赶紧做的。</p>
     <p>女学生们一开始也憎恨汉娜,不过，象不久死心了一样地分开组队开始了。</p>
@@ -154,7 +154,7 @@
     <p>我简单地做了自我介绍，展示了哈尔巴德型的万能钥匙。</p>
     <p>只要不使用迷宫的功能，就只是哈尔巴德。</p>
     <p>因为外观和以前也使用的市贩的哈尔巴德完全同样认为这个是主人钥匙的吸血鬼不在吧。</p>
-    <p>“汉纳汉堡包。不是贵族，是商人的女儿，请好好相处。</p>
+    <p>“汉纳·汉堡包。不是贵族，是商人的女儿，请好好相处。</p>
     <p>战斗可以稍微使用魔法”</p>
     <p>汉娜好像是商人的孩子。</p>
     <p>确实被这么一说，并没有什么贵族特色。</p>
