--- a/OEBPS/Text/c039.xhtml
+++ b/OEBPS/Text/c039.xhtml
@@ -19,8 +19,8 @@
     <p>而令人惊讶的是，那把剑与巴尔多至今所持有的虚伪王剑的设计完全相同。</p>
     <p>“<span class="character">你……</span>”</p>
     <p>但对梅赛德斯来说，更令人惊讶的是，比起剑，抵御了攻击的人物。:</p>
-    <p>水色的头发，与平素不同，很尖地:凝视这边的眼睛。</p>
-    <p>那是在学园生活中每天都会面的室友汉堡。</p>
+    <p>水色的头发，与平素不同，很尖地凝视这边的眼睛。</p>
+    <p>那是在学园生活中每天都会面的室友汉娜。</p>
     <p>惊讶地停止了动作只是一瞬间的事情。马上梅赛德斯砍掉武器把汉娜弹飞。</p>
     <p>“<span class="character">啊！等一下，梅赛德斯！</span>”</p>
     <p>汉娜一边改变姿势一边说什么,不过，没心情做问答。</p>
@@ -29,7 +29,7 @@
     <p>向隐密士兵们传达袭击的时机也是她。</p>
     <p>那么不用客气。只砍掉扔掉。</p>
     <p>“<span class="character">等一下，梅赛德斯！</span>”</p>
-    <p>但阻止它的却是伯恩哈特。</p>
+    <p>但阻止她的却是伯恩哈特。</p>
     <p>为什么这个男人会阻止我？虽然这么想，但是知道阻止这种事情是怎么回事。</p>
     <p>梅赛德斯撤下了武器，与汉娜拉开了距离。</p>
     <p>与此交换般，伯恩哈特前进，与汉娜相对。</p>
@@ -39,7 +39,7 @@
     <p>在学园里他绝不露面，这才是真正的面孔吗？</p>
     <p>话虽如此，“姐姐”到底是怎么回事？</p>
     <p>梅赛德斯如此惊讶，伯恩哈特显得无所谓。</p>
-    <p>“<span class="character">梅赛德斯。这家伙的名字叫汉娜.汉堡……结婚前的名字是汉娜·格鲁内瓦特。是我的姐姐，也就是你的伯母</span>”</p>
+    <p>“<span class="character">梅赛德斯。这家伙的名字叫汉娜·汉堡……结婚前的名字是汉娜·格鲁内瓦特。是我的姐姐，也就是你的伯母</span>”</p>
     <p>“<span class="character">……啥？</span>”</p>
     <p>“<span class="character">外表和你一样，实际年龄超过100，也生了孩子。</span>”</p>
     <p>听了那个说明，梅赛德斯不由得皱起眉头。</p>
@@ -108,7 +108,7 @@
     <p>父亲的罪孽和母亲的所作所为，一定都不知道。</p>
     <p>从心底深信自己是王族，名为吉克林德，并活了下来。</p>
     <p>吉克林德大概也知道这个道理吧，他只是以悲哀的眼光俯视着与自己同名的伪装公主。</p>
-    <p>“<span class="character">……抓住我吧</span>”</p>
+    <p>“<span class="character">……拿下</span>”</p>
     <p>遵从吉克林德的号令，被召唤了的龙们袭击了国王一家。</p>
     <p>已经谁也不想保护他们。</p>
     <p>虚假的国王一家轻易地被无力化，就这样，充满波折的生日祭拉上了帷幕。</p>
