--- a/OEBPS/Text/c041.xhtml
+++ b/OEBPS/Text/c041.xhtml
@@ -150,7 +150,7 @@
     <p>如果在这里奇怪地讨吉克林德的不快今后会变得难得相处的。</p>
     <p>那么，在这里，让大家看到稍微走近一点的姿势最终会有利吧。</p>
     <p>“<span class="character">原来如此，不愧是公主。我非常佩服那些夺走自己生活的人们的慈悲。</span></p>
-    <p><span class="character">那就这样吧。伊撒克的孩子们放逐边境，从事奴隶劳动</span>”</p>
+    <p><span class="character">那就这样吧。伊扎克的孩子们放逐边境，从事奴隶劳动</span>”</p>
     <p>“<span class="character">喂，是奴隶吗……</span>”</p>
     <p>“<span class="character">在此，如果让大家看到你悔改罪责、认真工作的姿态的话，我们也会考虑回归社会。怎么样？当然，为了不考虑叛乱，还是会派人监视的</span>”</p>
     <p>“<span class="character">呜、む……是啊。如果还残留着复归的可能性，还是好的一方吗……。</span></p>
