--- a/OEBPS/Text/c042.xhtml
+++ b/OEBPS/Text/c042.xhtml
@@ -21,8 +21,8 @@
     <p>那个理由是血。能操纵王剑的只有王家的血统，除了吉克林德和他的母亲以外没有其他人能操纵王剑。</p>
     <p>伊扎克养吉克林德父女，定期采集血液的事根据调查判明。</p>
     <p>于是，汉娜又从王城工作的厨师那听说了把血给自己的孩子。</p>
-    <p>……说点题外话，那位厨师在尽情吐露情报后被汉娜的手处刑。</p>
-    <p>然而，汉娜从外面雇佣的厨师却是格鲁内瓦特家的厨师长舒夫，这让柏恩哈特也大吃一惊。</p>
+    <p>……说点题外话，那位厨师在尽情吐露情报后经汉娜的手处刑。</p>
+    <p>然而，汉娜再从外面雇佣的厨师却是格鲁内瓦特家的厨师长舒夫，这让伯恩哈特也大吃一惊。</p>
     <p>总之先把话说回来。</p>
     <p>那个愚****，因为持续给予自己的孩子吉克林德的血的事，不知不觉变得能使用王剑的可能性依靠着。</p>
     <p>当然不可能用那种方法将迷宫的所有权转移。</p>
@@ -34,7 +34,7 @@
     <p>他马上彻底调查了伊扎克的私人房间，结果发现了通往地下室的隐藏通道。</p>
     <p>藏在那里的保险柜里的就是这个合同。</p>
     <p>作为『血之契约』的证据的血印被押，如果做背叛这个的仿效成为吸血鬼社会的小东西吧。</p>
-    <p>“<span class="character">……你这个笨蛋！我被骗了</span>”</p>
+    <p>“<span class="character">……你这个蠢蛋！被骗了</span>”</p>
     <p>那个内容，如果概括『把吉克林德公主作为王子的影武者送到学园，贝尔特里克斯帝国的人处理尸体也回收。与此同时，贝阿特里克斯女王17世向神发誓，不向奥尔克斯王国出手，支持它，发誓要守护它。另外，为了让伊扎克王得到民众的认可，魔物也会出借”。</p>
     <p>问题在于，发誓不再出手的是贝阿列克斯女王17世，而不是贝阿列克斯帝国。</p>
     <p>契约书上徒劳地列出专业术语，多使用绕圈子的措辞拉长句子，多余的补充和蛇脚使眼睛疲劳，很难注意到要点。</p>
@@ -68,7 +68,7 @@
     <p>全部是把吉克林德做为主人公的灰姑娘故事。</p>
     <p>高贵出生的公主过着不注意身份的生活，在救世主的救世主的帮助下又回到公主身边，打倒坏蛋，与贝亚特里克斯帝国搞好关系……这是孩子喜欢的二流剧本。</p>
     <p>然后那个果实，女主人公的少女的末路是傀儡。贝尔特里克斯帝国的言听计从，成为被名为“信赖”的锁链所束缚的忠实的手驹吧。</p>
-    <p>（ククク……看得见……从同盟到属国化是一条直线吗？</p>
+    <p>（库库库……看得见……从同盟到属国化是一条直线吗？</p>
     <p>不战而胜……想得可真周到。</p>
     <p>这么想的话，把伊扎克当成最初是他们选择的棋子会比较自然。也就是说从11年前就开始了。</p>
     <p>……在菲利克斯的生日祭上，有一件事，是为了打扰我的权威和影响而发生的……。</p>
