--- a/OEBPS/Text/c044.xhtml
+++ b/OEBPS/Text/c044.xhtml
@@ -107,7 +107,7 @@
     <p>如果妨碍的话，就只是在这里排除罢了。</p>
     <p>“<span class="character">你可别停得太高了。就算是公爵家……</span>”</p>
     <p>“<span class="character">喂，住手！</span>”</p>
-    <p>“<span class="character">但是，盖茨先生。这家伙对盖茨的好意……</span>”</p>
+    <p>“<span class="character">但是，盖茨大人。这家伙对盖茨的好意……</span>”</p>
     <p>“<span class="character">——住手</span>”</p>
     <p>“<span class="character">……啊。对，对不起。太过分的模仿……</span>”</p>
     <p>但是，在梅赛德斯出手之前，盖茨阻止了同伴的暴走。</p>
@@ -122,7 +122,7 @@
     <p>“<span class="character">……不，没关系。那么我就这样了</span>”</p>
     <p>“<span class="character">啊，啊。你们给我开辟道路！</span>”</p>
     <p>因为为我们让开了道路，梅赛德斯没有回头，就这样走在回宿舍的路上。</p>
-    <p>“<span class="character">盖茨先生，真的好吗？那样的小孩，就算是强迫也要……</span>”</p>
+    <p>“<span class="character">盖茨大人，真的好吗？那样的小孩，就算是强迫也要……</span>”</p>
     <p>刚才对梅赛德斯施加威胁的男人向盖茨打招呼。</p>
     <p>但那句话却无法持续到最后。</p>
     <p>因为正在说话的时候，盖茨的背面拳头就掉进他的脸上了。</p>
@@ -136,7 +136,7 @@
     <p><span class="character">为什么要学着买不高兴呢……。</span></p>
     <p><span class="character">公主的恩人、公爵家的成绩第一……被那样的人才有负的感情怎样做啊。</span></p>
     <p><span class="character">什么？你难道是其他派系的旋转兽吗？妨碍我吗？</span>”</p>
-    <p>“<span class="character">我只是想成为盖茨先生的力量……</span>”</p>
+    <p>“<span class="character">我只是想成为盖茨大人的力量……</span>”</p>
     <p>“<span class="character">啊？</span>”</p>
     <p>盖茨露骨地咂嘴，把男子摔在地板上。</p>
     <p>“<span class="character">喂，你那小小的脑袋，可能还不明白吧……学园毕业后人生也会继续下去的吧？那个小姑娘迟早要成个大人物的……所以如果现在就养个关系，然后再卖个恩惠的话，说不定之后就能得到便利了。</span></p>
@@ -165,7 +165,7 @@
     <p>再说一遍。</p>
     <p>“<span class="character">好吧！！</span>”</p>
     <p>再一次――。</p>
-    <p>“<span class="character">盖茨先生！我就要死掉了！</span>”</p>
+    <p>“<span class="character">盖茨大人！我就要死掉了！</span>”</p>
     <p>“<span class="character">……等一下</span>”</p>
     <p>来到这里，总算朋友中的一人因为停止了getsu的事他的手也停住。</p>
     <p>然后像扔垃圾一样把男人扔到地上，吐了口水。</p>
