--- a/OEBPS/Text/c049.xhtml
+++ b/OEBPS/Text/c049.xhtml
@@ -18,7 +18,7 @@
     <p>因此，两人都认为不应该提出这个话题。</p>
     <p>之后几次日落了，学生们盼望已久的狩猎节日终于到来了。</p>
     <p>主要的参加者大致在三年级以上，全体人员属于某些派系。</p>
-    <p>不是那样的只有梅赛德斯和吉克林登吧。</p>
+    <p>不是那样的只有梅赛德斯和吉克林德吧。</p>
     <p>话虽如此，吉克林德本人并不期望，但已经有几个学生靠近周围，随意形成派系之类的东西，很难说是个人参加。</p>
     <p>另外，以前以女学生为中心的亲卫队不知为何变成了以野郎为中心。</p>
     <p>这可能是因为吉克林德的性别外露吧。</p>
