--- a/OEBPS/Text/c056.xhtml
+++ b/OEBPS/Text/c056.xhtml
@@ -99,7 +99,7 @@
     <p>反正谁都不在，一个人在说话。</p>
     <p>只能认为变得可笑。</p>
     <p>但是，伯恩哈特却像有人看不见一样认真地回答着。</p>
-    <p>“<span class="character">ククク……果然如此。真是让人头疼的家伙。</span></p>
+    <p>“<span class="character">库库库……果然如此。真是让人头疼的家伙。</span></p>
     <p><span class="character">如果不知道的话也不是不可能的，但是这种程度的迷宫是无法试探的。</span></p>
     <p><span class="character">是啊……喂。接着是梅赛德斯……啊，对了，就是那个小姑娘的名字。</span></p>
     <p><span class="character">那个家伙来了的话，就解放到十八层吧。</span></p>
