--- a/OEBPS/Text/c060.xhtml
+++ b/OEBPS/Text/c060.xhtml
@@ -153,7 +153,7 @@
     <p>没有规定不能从别的城市买。只要是在规定的预算内，做什么都可以。</p>
     <p>于是汉娜在出发前和吉克林德的火腿助交换了魔物，乔装成吉克林德在平原上奔跑。</p>
     <p>并不是能预测白色装束的袭击。</p>
-    <p>只是，只是，警戒了用这个远出的实习虽说一时的jikurinde成为只监督生和二人的无防备的状态的事。</p>
+    <p>只是，只是，警戒了用这个远出的实习虽说一时的吉克林德成为只监督生和二人的无防备的状态的事。</p>
     <p>因此，自己所佩戴的监督生就是儿子，对此我感到很幸运，于是强行利用自己的能力改变了监督生。</p>
     <p>就这样，汉娜一身白衣，一手骗过菲利克斯替换，成功地守护了吉克林德。</p>
     <p>到此为止是汉娜的预测那样。</p>
