--- a/OEBPS/Text/c062.xhtml
+++ b/OEBPS/Text/c062.xhtml
@@ -15,7 +15,7 @@
     <p>得知汉娜和菲利克斯代替自己被捕后，吉克林德依靠火腿助的嗅觉追踪袭击者。</p>
     <p>仓鼠这种生物嗅觉敏锐，能通过气味来分辨地盘和脚印。</p>
     <p>并且体力也出色，野生的仓鼠寻求饵一天移动十km以上。</p>
-    <p>更何况吉克林登的火腿助是能装上吸血鬼移动的大尺寸。</p>
+    <p>更何况吉克林德的火腿助是能装上吸血鬼移动的大尺寸。</p>
     <p>那个移动距离不是普通的仓鼠的比较，从国家横渡国家更加也不会累吧。</p>
     <p>Gigantish仓鼠原本不是在迷宫出现的魔物。</p>
     <p>在迷宫中出现的魔物，是被铁甲虫捕获后带回家，经过几代人反复改良，使之更容易接近吸血鬼的爱玩用魔物。</p>
