--- a/OEBPS/Text/c066.xhtml
+++ b/OEBPS/Text/c066.xhtml
@@ -23,7 +23,7 @@
     <p>虽然有想要保护学生的心情，但确实不是应该勉强守护的存在。</p>
     <p>当时，我只考虑到那个程度。</p>
     <p>虽然弗里德里克是内行者，但不是国家的敌人。</p>
-    <p>但是由于吉克林登的真面目被揭露，事态一下子变得复杂了。</p>
+    <p>但是由于吉克林德的真面目被揭露，事态一下子变得复杂了。</p>
     <p>伊扎克王是只坐在宝座上的卖国奴，而且在其背后还有贝亚特里克斯帝国。</p>
     <p>伊扎克下台后，女帝贝阿朵里克斯试图与伊扎克接触，不用说，就是弗雷德里克。</p>
     <p>她通过使者命令弗里德里克。“协助诱拐公主”。</p>
