--- a/OEBPS/Text/c084.xhtml
+++ b/OEBPS/Text/c084.xhtml
@@ -117,7 +117,7 @@
     <p class="divline"></p>
     <p>【因为稍微有点麻烦，所以用王关联的方式复习】</p>
     <p>・出境巡回演出</p>
-    <p>吉克林登的祖父。不受男孩子的恩惠作为女儿的婿迎接了伊扎克的人的眼睛没有的男人。</p>
+    <p>吉克林德的祖父。不受男孩子的恩惠作为女儿的婿迎接了伊扎克的人的眼睛没有的男人。</p>
     <p>此次重新，暗杀攻略者的事变得清楚了。</p>
     <p>大体上都是从这家伙的无能中开始的。</p>
     <p>・艾尔弗里德音乐会</p>
