--- a/OEBPS/Text/c086.xhtml
+++ b/OEBPS/Text/c086.xhtml
@@ -38,7 +38,7 @@
     <p>这样一来，保持自然状态的人只有三种。</p>
     <p>一个人是迟钝到察觉到自己被威胁的程度。</p>
     <p>这从某种意义上说是幸福的人。</p>
-    <p>完全被巴西表面上的柔和所欺骗，墙壁上的士兵也只不过是可靠的护卫，就算是关上房间的钥匙，也照着画框像这样想的，完全无法察觉事情背后的老好人……总之，是象jikurinde一样的类型。</p>
+    <p>完全被巴西表面上的柔和所欺骗，墙壁上的士兵也只不过是可靠的护卫，就算是关上房间的钥匙，也照着画框像这样想的，完全无法察觉事情背后的老好人……总之，是象吉克林德一样的类型。</p>
     <p>……不，她到底没有察觉到那种程度。</p>
     <p>一个是过于自信的人。</p>
     <p>深信这种程度的兵力不是什么东西的数量，对于自以为了不起，自以为了不起的对手这样的威胁是行不通的。</p>
