--- a/OEBPS/Text/c088.xhtml
+++ b/OEBPS/Text/c088.xhtml
@@ -119,7 +119,7 @@
     <p>“<span class="character">就算你知道，那也是刚才说的副官。</span></p>
     <p><span class="character">事后报告说克里斯托夫的孩子被捕后处刑了。然后，之后马上就辞职了</span>”</p>
     <p>“<span class="character">那个副官的名字是？</span>”</p>
-    <p>“<span class="character">尼级允浩斯。其实我和梅尔是亲戚</span>”</p>
+    <p>“<span class="character">尼级允浩斯。其实和我与梅尔是亲戚</span>”</p>
     <p>汉娜的原副官好像是梅赛德斯的亲戚。</p>
     <p>有什么讨厌的联系方式呢……一边这样想着一边催促话题的继续。</p>
     <p>“<span class="character">怎么回事？</span>”</p>
