--- a/OEBPS/Text/c089.xhtml
+++ b/OEBPS/Text/c089.xhtml
@@ -36,10 +36,10 @@
     <p>其中特别显眼的大房子就是这次的目的地。</p>
     <p>梅赛德斯一边走着去那里的路，一边向汉娜询问在意的事情。</p>
     <p>“<span class="character">那件事的人物是尼古拉斯•尤恩卡斯吗？看来和接下来要去的房子的名字不一样？</span>”</p>
-    <p><span class="character">尼古拉斯原本是子爵家。但是在莎恩贝尔克家入赘女婿后家名就变了。</span></p>
-    <p><span class="character">所以现在的名字好像是尼古拉斯、尹卡斯、冯、施彼勒、谢恩贝尔克。”</span>”</p>
+    <p><span class="character">尼古拉斯原本是子爵家。但是在莎恩伯格家入赘女婿后家名就变了。</span></p>
+    <p><span class="character">所以现在的名字好像是尼古拉斯、尹卡斯、冯、施彼勒、莎恩伯格。”</span>”</p>
     <p><span class="comment translator">ニクラス・ユンカース・フォン・シュピラーレ・シェーンベルク</span></p>
-    <p>“<span class="character">也就是说，容克斯家的尼古拉斯入赘到了莎恩贝尔克家，那里的女儿瓦尔布尔加进入了格鲁内瓦特家……但是瓦尔布尔加实际上可能是战斗家的女儿。</span></p>
+    <p>“<span class="character">也就是说，容克斯家的尼古拉斯入赘到了莎恩伯格家，那里的女儿瓦尔布尔加进入了格鲁内瓦特家……但是瓦尔布尔加实际上可能是战斗家的女儿。</span></p>
     <p><span class="character">总觉得变得麻烦起来了</span>”</p>
     <p>“<span class="character">贵族什么的到处都是亲戚。</span>”</p>
     <p>汉娜一边说话一边哈哈大笑。</p>
