--- a/OEBPS/Text/c090.xhtml
+++ b/OEBPS/Text/c090.xhtml
@@ -12,12 +12,12 @@
 
 <body>
     <h1>90. 不忍心的暗杀者</h1>
-    <p>明早……大家安静下来的时候。</p>
+    <p>翌日早上……大家安静下来的时候。</p>
     <p>在朝阳的照射下，多个影子开始活动。</p>
     <p>以人的感性来看“他们有忍耐的意思吗？”想说的情景,不过，吸血鬼夜里视力很强，但是对光弱。</p>
     <p>就像人类在黑暗中需要时间直到眼睛习惯一样，吸血鬼在光线中眼睛不太灵活。</p>
-    <p>他们的这次的目标是shenberg家的人们的头。</p>
-    <p>谢恩贝尔格的现任当主曾经是王家直属的暗部，并且根据他的命令克里斯托夫·费特被暗杀了。</p>
+    <p>他们的这次的目标是莎恩伯格家的人们的头。</p>
+    <p>莎恩伯格的现任当主曾经是王家直属的暗部，并且根据他的命令克里斯托夫·费特被暗杀了。</p>
     <p>不仅如此，逮捕了两个女儿中的一人也是他。</p>
     <p>也就是说，对于举起真王的他们来说，是绝对不会放过的不共戴天的敌人。</p>
     <p>经过训练后向卧室走去，但其路线也不止一个。</p>
@@ -101,19 +101,19 @@
     <p>“<span class="character">差不多该出来了吧？</span>”</p>
     <p>所以试着说了合适的事情。</p>
     <p>虽说如此，这只是小玩儿。梅赛德斯和汉娜不同，无法探知对方的气息。</p>
-    <p>不知道是不是藏在那种地方了，就算真的藏了起来，也不会有**吧。</p>
+    <p>不知道是不是藏在那种地方了，就算真的藏了起来，也不会有笨蛋吧。</p>
     <p>一边这样想着，一边看着，从树背面突然出现了一个女人。</p>
     <p>“<span class="character">真能干……虽然完全隐瞒了气息，但还是注意到了我的存在。</span></p>
     <p><span class="character">到底是怎么看破的？</span>”</p>
     <p>（真的出现了。）</p>
-    <p>看来是找到了**。</p>
+    <p>看来是找到了笨蛋。</p>
     <p>想说那样的事，清淡地出来了。</p>
     <p>哎呀，那该迷你了。也许只是个围裙吧。</p>
     <p>或者如果觉得找到了，就撤退吧。为什么发现后高兴地跳出来了呢？</p>
     <p>那个吗？用捉迷藏藏太厉害了没被发现，请对最后能发现的话变得高兴，那样的类型吗？</p>
-    <p>“<span class="character">我的名字叫尤利亚。自报家门……你也不是普通人吧</span>”</p>
+    <p>“<span class="character">我的名字叫尤利娅。自报家门……你也不是普通人吧</span>”</p>
     <p>（不，别自报家门。偷偷）</p>
-    <p>这个女人，想表现出大人物感，难道是**吗？</p>
+    <p>这个女人，想表现出大人物感，难道是笨蛋吗？</p>
     <p>为什么会在这个时机自报家门呢？</p>
     <p>侵入者自己从nokokoko出来自我介绍啦舐着吗？</p>
     <p>而且服装也开玩笑。</p>
@@ -124,11 +124,11 @@
     <p>是谁，把这个作为暗杀者放出的笨蛋。</p>
     <p>“<span class="character">我们之王，马克斯等人为了坐上这个国家的宝座，曾经杀死克里斯托夫大人的二阶·尹克斯不应该活用。打扰你的话，大小姐也没事啊！</span>”</p>
     <p>到最后开始谈论自己的所属和目的。</p>
-    <p>啊，这家伙是**。梅赛德斯如此确信。</p>
+    <p>啊，这家伙是笨蛋。梅赛德斯如此确信。</p>
     <p>真的是谁啊，这家伙送到这里了？</p>
     <p>（……好，这个家伙活捉吧。）</p>
     <p>如果弄活带回去这个那个地快要暴露了的心情了。</p>
-    <p>这样想着，梅赛德斯下决心要捕捉这个***。</p>
+    <p>这样想着，梅赛德斯下决心要捕捉这个笨蛋*。</p>
 </body>
 
 </html>
