--- a/OEBPS/Text/c091.xhtml
+++ b/OEBPS/Text/c091.xhtml
@@ -149,10 +149,10 @@
     <p>全くもって忙しない、気の抜けない相手だ。</p>
     <p>真是个忙得不可开交的对手。</p>
     <p>但是有参考价值。</p>
-    <p>梅赛德斯仿效尤利亚踢向天空，绕到她身旁。</p>
+    <p>梅赛德斯仿效尤利娅踢向天空，绕到她身旁。</p>
     <p>“<span class="character">什！？</span>”</p>
     <p>“<span class="character">原来如此，这样做啊。还比你粗暴一点吧</span>”</p>
-    <p>这么说着，踢开了惊愕的尤利亚的侧腹。</p>
+    <p>这么说着，踢开了惊愕的尤利娅的侧腹。</p>
     <p class="divline"></p>
     梅赛德斯“ところで、術発動前のその印に意味はあるのか？”
 
