--- a/OEBPS/Text/c092.xhtml
+++ b/OEBPS/Text/c092.xhtml
@@ -12,26 +12,26 @@
 
 <body>
     <h1>92. 情报源捕获</h1>
-    <p>梅赛德斯追赶着吹跑的尤利亚，在空中踢了一脚。</p>
+    <p>梅赛德斯追赶着吹跑的尤利娅，在空中踢了一脚。</p>
     <p>用风的魔法制造立足点，踩它在空中也能像地上一样移动。</p>
-    <p>是看了几次尤利亚那个运动，试着模仿的。</p>
+    <p>是看了几次尤利娅那个运动，试着模仿的。</p>
     <p>梅赛德斯平时也踢着天空移动着,不过，天空立足点没做(制作)。</p>
     <p>那只是因为踢的反作用在跳。</p>
     <p>但是，这样的话就能比平时更快速的运动了。</p>
     <p>（做法是……这样吗？）</p>
     <p>在前进方向上设置几个立足点。</p>
-    <p>前方右边一个，再前方上方一个。前方有一个。还有尤利亚的背后也是一个。</p>
+    <p>前方右边一个，再前方上方一个。前方有一个。还有尤利娅的背后也是一个。</p>
     <p>决定自己前进的路线，向着创造出的脚手处跳跃。</p>
     <p>着地——虽然不知道是否可以称之为着地，但暂且先作为着地。</p>
     <p>同时跳跃，又着陆到别的脚手处跳跃。</p>
     <p>由于反复那个的事出生的三维的机动。</p>
     <p>如果比喻的话，就是在狭窄的框架中多次反弹的像乒乓球一样的忙碌。</p>
-    <p>取得了尤利亚的背后的梅赛德斯放出踢，尤利亚用胳膊接住了那个。</p>
+    <p>取得了尤利娅的背后的梅赛德斯放出踢，尤利娅用胳膊接住了那个。</p>
     <p>如果是梅赛德斯的力量的话，应该可以连骨头都发挥出来……总觉得从刚才开始有效着,不过，一点反应也不觉得。</p>
     <p>即使是锻炼了的吸血鬼，如果认真地接受梅赛德斯的踢首先骨的一，二个折断吧。</p>
     <p>也有用调节了的拳击使之闷绝了菲利克斯的事。</p>
-    <p>这究竟是怎么回事……这样想着，尤利亚焦急地叫着。</p>
-    <p>“<span class="character">什么是力量！用风来传播威力，却连芯都回响了！你真的是吸血鬼吗！？</span>”</p>
+    <p>这究竟是怎么回事……这样想着，尤利娅焦急地叫着。</p>
+    <p>“<span class="character">什么样的力量啊！用风来传播威力，却连芯都回响了！你真的是吸血鬼吗！？</span>”</p>
     <p>谢谢您的解说。</p>
     <p>虽然没有说出口，但梅赛德斯就是这样的心情。</p>
     <p>原来如此，在冲击力瞬间被风包围，会使冲击力转移吗？</p>
@@ -40,15 +40,15 @@
     <p>这家伙，只要不是傻瓜，就已经是可怕的敌人了吧。</p>
     <p>“<span class="character">啊！</span>”</p>
     <p>“<span class="character">哎呀哎呀！</span>”</p>
-    <p>为了响应梅赛德斯的尖锐尖锐的呐喊，尤利亚发出了怪声。</p>
+    <p>为了响应梅赛德斯的尖锐尖锐的呐喊，尤利娅发出了怪声。</p>
     <p>二人之间手腕和脚很快地被交换，两者一步也不退的格斗战展开了。</p>
-    <p>手甲和短刀相撞，尤利亚徒手弹出了梅赛德斯的手刀。</p>
-    <p>用气势回旋踢交叉，犹如尤利亚继续流动般放出第二击。</p>
-    <p>弯腰躲开那个，绊脚。扭转姿势……就在这时，尤利亚迅速倒立，用胳膊的力量转动。</p>
+    <p>手甲和短刀相撞，尤利娅徒手弹出了梅赛德斯的手刀。</p>
+    <p>用气势回旋踢交叉，犹如尤利娅继续流动般放出第二击。</p>
+    <p>弯腰躲开那个，绊脚。扭转姿势……就在这时，尤利娅迅速倒立，用胳膊的力量转动。</p>
     <p>简直像陀螺一样旋转着连续踢出踢，从防御上面攻击了梅赛德斯。</p>
     <p>接着，又想到这次是脚夹住了梅赛德斯的脖子，就用脚把梅赛德斯扔了出去。</p>
     <p>与地面相撞，以其反动跳跃。在空中旋转马上决定着地。</p>
-    <p>之后尤利亚一边向右跳一边追踪。</p>
+    <p>之后尤利娅一边向右跳一边追踪。</p>
     <p>（动作不错……攻击的大部分是下一次攻击的布局）</p>
     <p>稍微避开大挥的手刀。</p>
     <p>可是它象瞄准一样击落了到后面的梅赛德斯的掌打迫近，并直击了胸。</p>
@@ -57,18 +57,18 @@
     <p>就像是突破防御意识的松懈一样，准确的进攻。</p>
     <p>如果不是梅赛德斯，现在就被迫昏倒了吧。</p>
     <p>“<span class="character">嘘！</span>”</p>
-    <p>不服输和放出拳头，尤利亚很大地弯曲上体回避。</p>
+    <p>不服输和放出拳头，尤利娅很大地弯曲上体回避。</p>
     <p>就这样向后方一边旋转一边放出踢，弹出了梅赛德斯的手臂。</p>
     <p>再从那里倒立。和刚才一样，只靠手臂的力量来回转踢球。</p>
-    <p>但是，梅赛德斯也差不多适应了尤利亚的活动了。</p>
+    <p>但是，梅赛德斯也差不多适应了尤利娅的活动了。</p>
     <p>抓住反复踢出的脚，握拳。</p>
     <p>无论怎么敏捷，只要停止了动作，就应该有道理。</p>
-    <p>然而，尤利亚却如预期般制作冰短刀，用脚趾夹入梅赛德斯的脖子。</p>
-    <p>由于瞬间把尤利亚向上空扔掉的事回避,不过，用这个重新站立了姿势。</p>
+    <p>然而，尤利娅却如预期般制作冰短刀，用脚趾夹入梅赛德斯的脖子。</p>
+    <p>由于瞬间把尤利娅向上空扔掉的事回避,不过，用这个重新站立了姿势。</p>
     <p>（先读的精确度不是零星的。恐怕不是脑子里想的吧……是动物般的直觉吗？）</p>
-    <p>尤利亚是个笨蛋。这个可以考虑确定了。</p>
+    <p>尤利娅是个笨蛋。这个可以考虑确定了。</p>
     <p>虽然也稍微考虑了一下在演技上故意装傻的策士的可能性，但是做这个没有意义吧。</p>
-    <p>的确，梅赛德斯已经成功地被吸引到这里，但是如果有时间去演绎笨蛋的话，还是用米卡美术什么的偷偷潜入了莎恩贝尔克夫妻的圈套更早。</p>
+    <p>的确，梅赛德斯已经成功地被吸引到这里，但是如果有时间去演绎笨蛋的话，还是用米卡美术什么的偷偷潜入了莎恩伯格夫妻的圈套更早。</p>
     <p>因此，她头脑中的遗憾是无可置疑的。</p>
     <p>如果在演傻瓜，那是装傻的傻瓜。</p>
     <p>可是预先读得快。这边的攻击全部被读。</p>
@@ -84,34 +84,34 @@
     <p>周围一带……连自己都包括在内的广大范围内产生了重压。</p>
     <p>草毁了，落在地上的小树枝折断了，只是在附近飞翔的鸟掉落在地上。</p>
     <p>鸟干了什么？</p>
-    <p>然后，尤利亚也被从天上拖下来，像崩溃的青蛙一样倒在地上。</p>
+    <p>然后，尤利娅也被从天上拖下来，像崩溃的青蛙一样倒在地上。</p>
     <p>旁边真的青蛙也一起崩溃了。</p>
     <p>“<span class="character">嗯……呜、动不了……</span>”</p>
     <p>把重力变成10倍体重成为10倍当然，那个以外也各种各样的弊端发生。</p>
     <p>血液不会在番茄中循环，首先是不能正常运转的。</p>
     <p>即使是平时习惯了重力的梅赛德斯，也能忍受10倍。</p>
-    <p>那么，尤利亚不可能满足地行动。</p>
+    <p>那么，尤利娅不可能满足地行动。</p>
     <p>对于速度型的对手来说可以说是噩梦般的犯规技巧吧。</p>
     <p>“不好意思啊。即使这样战斗，似乎也会有些棘手，所以就让我使用狡猾的手。</p>
     <p>总之……先睡一次吧”</p>
-    <p>“<span class="character">呃……杀我！</span>”</p>
+    <p>“<span class="character">咕……杀了我！</span>”</p>
     <p>“<span class="character">这样啊，那去死吧</span>”</p>
     <p>“<span class="character">！？</span>”</p>
     <p>因为说着什么杀啦定一对的台词，总觉得试着做杀。</p>
     <p>把手甲放回哈尔巴德，顶在了脖子上。</p>
     <p>当然是摆了。信息也没使之吐出，不想杀。</p>
-    <p>但是尤利亚好像真的接受了，脸色苍白了。</p>
+    <p>但是尤利娅好像真的接受了，脸色苍白了。</p>
     <p>“等一下！那里不是普通真的杀的场面吧！？</p>
     <p>果然没有！刚才的梨！”</p>
     <p>“<span class="character">……是吗？</span>”</p>
     <p>怎么说也是个泄气的对手。</p>
     <p>如果以这个为目标来做的话，那真是了不起。</p>
-    <p>梅赛德斯从手镯中拿出花的魔物，朝向尤利亚。</p>
-    <p>在重力10倍中被叫出的魔物看起来非常辣,不过，毅然向尤利亚吐出了气体。</p>
-    <p>于是，尤利亚不发呆地失去了意识。</p>
+    <p>梅赛德斯从手镯中拿出花的魔物，朝向尤利娅。</p>
+    <p>在重力10倍中被叫出的魔物看起来非常辣,不过，毅然向尤利娅吐出了气体。</p>
+    <p>于是，尤利娅不发呆地失去了意识。</p>
     <p>是诱导对象进入睡眠的特殊花粉。如果对方患有花粉症，效果会加倍。</p>
     <p>“<span class="character">好厉害……</span>”</p>
-    <p>尤利亚好像完全睡着了，流着口水在打鼻灯笼。</p>
+    <p>尤利娅好像完全睡着了，流着口水在打鼻灯笼。</p>
     <p>梅赛德斯抓住了她的脖颈，拖拉着走了。</p>
     <p>打了意想不到的苦战,不过，里面没问题吗？</p>
     <p>嗯，因为有汉娜所以没问题吧。</p>
@@ -119,29 +119,29 @@
     <p>正如预想的那样，里面没有问题地整理着。</p>
     <p>侵入宅邸内的暗杀者全部由汉娜和她使之待命的魔物处理。</p>
     <p>一部分被活捉的人也在,不过，这边也被无力化。</p>
-    <p>汉娜注意到把尤利亚带回来的梅赛德斯，小跑着走了过来。</p>
+    <p>汉娜注意到把尤利娅带回来的梅赛德斯，小跑着走了过来。</p>
     <p>“<span class="character">欢迎回来，梅露。太晚了</span>”</p>
     <p>“<span class="character">啊，有点棘手。</span>”</p>
     <p>对于梅赛德斯的话，汉娜表情很严峻。</p>
     <p>梅赛德斯很棘手，很了不起。</p>
-    <p>但是看到她扔过来的尤利亚，他露出了满意的表情。</p>
-    <p>“<span class="character">啊，是尤利亚啊。</span>”</p>
+    <p>但是看到她扔过来的尤利娅，他露出了满意的表情。</p>
+    <p>“<span class="character">啊，是尤利娅啊。</span>”</p>
     <p>“<span class="character">你认识吗？</span>”</p>
     <p>“<span class="character">还没到认识的人的程度。我只是单方面的知道而已。是有名的孩子哦……在各种意义上</span>”</p>
     <p>嗯，这样啊，梅赛德斯没有特别抵触地理解了。</p>
     <p>有那么多本事。这方面就算有名也不奇怪。</p>
     <p>倒不如说拥有这么多本领的人无名才是问题。</p>
     <p>更何况是精通背后情报的汉娜，知道之后也是理所当然的吧。</p>
-    <p>“原来是农民的孩子。因为不是贵族出身(生)没有家名,不过，这个也是B等级的seeker哟。</p>
-    <p>貌似在佛格拉国修行积累了一些经验，要使用Ninjuts之类的独特技能”</p>
+    <p>“<span class="character">原来是农民的孩子。因为不是贵族出身(生)没有家名,不过，这个也是B等级的seeker哟。</span></p>
+    <p><span class="character">貌似在佛格拉国修行积累了一些经验，要使用Ninjuts之类的独特技能</span>”</p>
     <p>“<span class="character">B？从技能上来说，我觉得A也不奇怪</span>”</p>
-    <p>“手艺不错，但是忘记委托内容回来了，或者在送货途中吃掉、丢失，或者弄错讨伐对象，失败也很多。</p>
-    <p>然后，虽然也曾被其他人买下手艺加入过骑士团，但被敌人骗了后，将重要的机密交给了他，马上就被解雇了……正如字面那样差点被斩首而逃走，之后就下落不明了，没想到竟然在这样的地方”</p>
+    <p>“<span class="character">手艺不错，但是忘记委托内容回来了，或者在送货途中吃掉、丢失，或者弄错讨伐对象，失败也很多。</span></p>
+    <p><span class="character">然后，虽然也曾被其他人买下手艺加入过骑士团，但被敌人骗了后，将重要的机密交给了他，马上就被解雇了……正如字面那样差点被斩首而逃走，之后就下落不明了，没想到竟然在这样的地方</span>”</p>
     <p>梅赛德斯想，只要听着就会头疼。</p>
-    <p>这个叫尤利亚的女人，虽然手臂是真的，但是脑袋太可惜了。</p>
+    <p>这个叫尤利娅的女人，虽然手臂是真的，但是脑袋太可惜了。</p>
     <p>倒不如说是因为头很遗憾，所以更擅长运动身体吧。</p>
-    <p>“嘛，这样的话情报源就到手了。这个孩子说得随便一点就会吐的。</p>
-    <p>还有，梅露，就算搞错了，也不要把重要的信息传给这个孩子。我一定在那边玫瑰”</p>
+    <p>“<span class="character">嘛，这样的话情报源就到手了。这个孩子说得随便一点就会吐的。</span></p>
+    <p><span class="character">还有，梅露，就算搞错了，也不要把重要的信息传给这个孩子。我一定在那边玫瑰</span>”</p>
     <p>“<span class="character">……啊</span>”</p>
     <p>不管怎么说，这样应该可以得到对方的情报。</p>
     <p>这么简单可以吗，虽然这么想，但现在还是决定为这个幸运感到高兴。</p>
