--- a/OEBPS/Text/c093.xhtml
+++ b/OEBPS/Text/c093.xhtml
@@ -12,8 +12,8 @@
 
 <body>
     <h1>93. 简单的审问</h1>
-    <p>抓住尤利亚的梅赛德斯和汉娜决定租一间房子去问她。</p>
-    <p>汉娜首先用理所当然的脸把尤利亚的衣服剥下来，露出内衣的样子，固定在椅子上，用坚固的绳子绑起来。</p>
+    <p>抓住尤利娅的梅赛德斯和汉娜决定租一间房子去问她。</p>
+    <p>汉娜首先用理所当然的脸把尤利娅的衣服剥下来，露出内衣的样子，固定在椅子上，用坚固的绳子绑起来。</p>
     <p>汉娜说“不知道衣服下面藏着什么”。</p>
     <p>实际上，短刀、魔石、手里剑之类的东西都是哗啦哗啦地出现的，这是正确的判断吧。</p>
     <p>而且还抢走了内衣，用合适的布代替，遮住了身体。</p>
@@ -27,7 +27,7 @@
     <p><span class="character">他们在水上行走，在墙上奔跑，做着各种各样的不可思议的事情。</span></p>
     <p><span class="character">总之，因为不知道自己会做什么，所以不是特别想合作的对象</span>”</p>
     <p>“<span class="character">交战过吗？</span>”</p>
-    <p>“<span class="character">过去有过几次呢。然后，尤利亚因为憧憬这种弗格拉的术而单身前往另一个国家修行。</span></p>
+    <p>“<span class="character">过去有过几次呢。然后，尤利娅因为憧憬这种弗格拉的术而单身前往另一个国家修行。</span></p>
     <p><span class="character">因为太憧憬弗格拉，连背上奇怪的羽毛装饰都穿上了……哎呀，说起来今天没有装饰啊</span>”</p>
     <p>啊，那个无用的装饰是模仿长笛的吗？</p>
     <p>这样想着，梅赛德斯也理解了那个装饰是否也有它的意义。</p>
@@ -35,21 +35,21 @@
     <p>即使那样弗格拉的印象大大地快要变化了。</p>
     <p>弗格拉似乎是具有鸟类特征的法鲁什，但梅赛德斯没有亲眼见过。</p>
     <p>可是由于鸟人这个事，总觉得象西洋的天使一样的东西。</p>
-    <p>但是只看尤利亚，难道是相当和风的家伙吗？我开始觉得。</p>
-    <p>汉娜拍了几下尤利亚的脸颊，醒了。</p>
+    <p>但是只看尤利娅，难道是相当和风的家伙吗？我开始觉得。</p>
+    <p>汉娜拍了几下尤利娅的脸颊，醒了。</p>
     <p>总之，从这里开始审讯。</p>
     <p>那么，汉娜是怎么问出情报的呢……。</p>
-    <p>尤利亚再愚蠢，如果说‘把你知道的信息说出来’，那也只能闭嘴。</p>
-    <p>“<span class="character">早上好。醒了吗？尤利亚</span>”</p>
+    <p>尤利娅再愚蠢，如果说‘把你知道的信息说出来’，那也只能闭嘴。</p>
+    <p>“<span class="character">早上好。醒了吗？尤利娅</span>”</p>
     <p>“<span class="character">这，这里究竟是……而且你呢？</span>”</p>
     <p>“<span class="character">我是赞同‘真正的王’的人之一。我是为了收集情报而来到这个房子的，没想到你把我弄得这么乱</span>”</p>
     <p>突然开始说些出乎意料的谎言。</p>
     <p>可是因为知道汉娜打算怎样的方向打算带话，梅赛德斯暂且预先关上口。</p>
     <p>“<span class="character">喂，是同伴吗！？那好，马上解开我的拘束吧！</span>”</p>
     <p>“<span class="character">你是笨蛋吗？我表面上是这里的护卫，不可能做那种事吧。</span></p>
-    <p><span class="character">我接到巴吉尔的任务，潜入了谢恩贝尔克夫妇的怀里，与暗杀部队协力拘留了他们的身份……之后让他们站在应有的立场上，从他们自己的口中说出了过去的坏事。</span></p>
+    <p><span class="character">我接到巴吉尔的任务，潜入了莎恩伯格夫妇的怀里，与暗杀部队协力拘留了他们的身份……之后让他们站在应有的立场上，从他们自己的口中说出了过去的坏事。</span></p>
     <p><span class="character">由于那样请的事主张『真正的王』的正当性，把舆论倾向这边是本来的计划哟。</span></p>
-    <p><span class="character">暗杀部队的任务是为了处理碍事的护卫和佣人，不是杀害莎恩贝尔克夫妻……你反正也不知道那种事吧？</span>”</p>
+    <p><span class="character">暗杀部队的任务是为了处理碍事的护卫和佣人，不是杀害莎恩伯格夫妻……你反正也不知道那种事吧？</span>”</p>
     <p>“<span class="character">什，你说什么！？</span>”</p>
     <p>竟敢如此撒谎。</p>
     <p>而且，真的能听得见那样很厉害。</p>
@@ -60,9 +60,9 @@
     <p><span class="character">因为是绝密任务，所以除了负责任务的人以外，没有人能告诉你吧。</span></p>
     <p><span class="character">话说，为什么擅自出来了？多亏了你，计划才乱七八糟的</span>”</p>
     <p>“<span class="character">啊，不，那个……</span>”</p>
-    <p>对汉娜的话，尤利亚眼看着惊慌失措。</p>
+    <p>对汉娜的话，尤利娅眼看着惊慌失措。</p>
     <p>所谓禁止出击命令，不过是汉娜的想象而已。</p>
-    <p>但是如果是认真的指挥官的话，汉娜确信先不让尤利亚出场。</p>
+    <p>但是如果是认真的指挥官的话，汉娜确信先不让尤利娅出场。</p>
     <p>像这样轻而易举地说出重大情报的家伙，绝密任务是不能胜任的。</p>
     <p>她本来手艺就很好，但是由于过于激烈的自我主张，作为暗杀者来说是不合格的。</p>
     <p>一瞬间身分就要被打破的家伙是不可能把暗杀交给他的。</p>
@@ -73,7 +73,7 @@
     <p>“<span class="character">我知道啦！改变现在的贵族上位制度，带来真正的平等和和平！</span></p>
     <p><span class="character">要成为一个没有饥饿和痛苦的百姓的国家！这就是马克斯先生的理想吧！？</span>”</p>
     <p>首先，立刻，问出马克斯的理想啦的事成功。</p>
-    <p>我不知道这是马克斯本人孩子留下的幻想，还是罗勒吹嘘的表面理想，尤利亚似乎相信这个。</p>
+    <p>我不知道这是马克斯本人孩子留下的幻想，还是罗勒吹嘘的表面理想，尤利娅似乎相信这个。</p>
     <p>她好像是农民出身，所以非常向往那种平等的社会吧。</p>
     <p>“<span class="character">嗯。最低限度的事好象大体上知道。</span></p>
     <p><span class="character">但是你的疑虑还没有消除</span>”</p>
@@ -87,7 +87,7 @@
     <p>“<span class="character">不，就算是我，我也不会做到那种程度！大家好好地都记得哟！</span></p>
     <p><span class="character">听好了，仔细听……首先是三人商会的トライヌ吧。然后……</span>”</p>
     <p>实在是微不足道。</p>
-    <p>梅赛德斯只能惊讶于尤利亚的嘴巴之轻。</p>
+    <p>梅赛德斯只能惊讶于尤利娅的嘴巴之轻。</p>
     <p>有趣地列举一个接一个协助『真正的王』的选民们的名字。</p>
     <p>恐怕也有和トライヌ一样对前任国王厌烦，借助自己的力量逃脱不了的人吧。</p>
     <p>除此之外，也许还有几个人想借助我们的力量在之后吸取甜美的汁液。</p>
@@ -97,20 +97,20 @@
     <p>商人和选民只能离开国家，成为‘夺取国家的侵略者’吧。</p>
     <p>如果自称国王，支撑国家的选民这个基础是不可缺少的……反过来说，如果将所有选民都拿到手里的话，那个时候他们的目的就无法实现了。</p>
     <p>而现在，可以说是命脉的情报传到了汉娜。</p>
-    <p>尤利亚一定无法理解自己现在做了什么。</p>
+    <p>尤利娅一定无法理解自己现在做了什么。</p>
     <p>此后汉娜用语言巧妙地引导，一个接一个引出信息。</p>
     <p>然后听完所有的情报后，就向梅赛德斯签了手。审问似乎已经可以了。</p>
     <p>梅赛德斯应那个指示再次拿出花的魔物，给叙利亚花粉。</p>
     <p>于是她再次坠入了梦的世界。</p>
     <p>“<span class="character">好厉害……</span>”</p>
-    <p>把完全熟睡了的尤利亚关在房间里，汉娜和梅赛德斯出去了。</p>
+    <p>把完全熟睡了的尤利娅关在房间里，汉娜和梅赛德斯出去了。</p>
     <p>虽然得到了很多情报，但还残留着本命。</p>
     <p>马克斯和瓦尔堡加……并且知道了菲利克斯的关系的时候来了。</p>
-    <p>“<span class="character">梅尔。为了慎重起见，请让尤利亚再来一次。然后再听二班同学说吧</span>”</p>
+    <p>“<span class="character">梅尔。为了慎重起见，请让尤利娅再来一次。然后再听二班同学说吧</span>”</p>
     <p>“<span class="character">真慎重</span>”</p>
     <p>“<span class="character">那是。如果今后听的信息很差的话，也许会动摇国家。</span></p>
     <p><span class="character">而且为了菲利克斯的安全，只想问我们两个。</span></p>
-    <p><span class="character">特别是绝对不会被尤利亚问到</span>”</p>
+    <p><span class="character">特别是绝对不会被尤利娅问到</span>”</p>
     <p>还没有确定。</p>
     <p>但是有确信。菲利克斯肯定是这样的。</p>
     <p>一般来说，只是巧合的可能性比较高。</p>
