--- a/OEBPS/Text/c094.xhtml
+++ b/OEBPS/Text/c094.xhtml
@@ -12,10 +12,10 @@
 
 <body>
     <h1>94. 恶化的事态</h1>
-    <p>和尤利亚战斗了几个小时。</p>
+    <p>和尤利娅战斗了几个小时。</p>
     <p>由于太阳下山夫妇起床了的事终于梅赛德斯们能听真命的信息。</p>
-    <p>细心地让尤利亚再次闻到花粉使她入睡，然后关在屋子的一间屋子里监视。</p>
-    <p>在此基础上，施加了隔音魔法的别室只有谢恩贝尔克夫妇和梅赛德斯、汉娜四人进入，关上门。</p>
+    <p>细心地让尤利娅再次闻到花粉使她入睡，然后关在屋子的一间屋子里监视。</p>
+    <p>在此基础上，施加了隔音魔法的别室只有莎恩伯格夫妇和梅赛德斯、汉娜四人进入，关上门。</p>
     <p>这样的话，就不会早早地把话泄露在外面了吧。</p>
     <p>汉娜毫不客气地向坐在椅子上，看起来难以交谈的以前的部下切入正题。</p>
     <p>“<span class="character">我不喜欢拐弯抹角，我先问你答案吧。</span></p>
@@ -92,16 +92,16 @@
     <p>“<span class="character">早晚有教的必要，现在还是不说比较好吧。</span></p>
     <p><span class="character">奇怪地发挥责任感被做奇怪的事也感到为难。</span></p>
     <p><span class="character">我先把这个房子留个护卫，二班同学也要小心啊</span>”</p>
-    <p>首先决定今后的方针，然后汉娜朝着关闭尤利亚的房间前进。</p>
+    <p>首先决定今后的方针，然后汉娜朝着关闭尤利娅的房间前进。</p>
     <p>回去之前，她有必要好好地回收。</p>
     <p>逃跑什么的太麻烦了，所以还是严加关闭比较好吧。</p>
     <p>这种想法在开门的瞬间就被吹跑了。</p>
-    <p>——竟然没有尤利亚。</p>
+    <p>——竟然没有尤利娅。</p>
     <p>我应该牢牢地绑在椅子上的，却完全消失了。</p>
     <p>然后本应该被监视的部下倒在地上。</p>
     <p>“<span class="character">诶……等一下！小梅尔停</span>”</p>
     <p>汉娜虽然很着急，但也不慌不忙地进入房间，制止了梅赛德斯之后开始寻找动静。</p>
-    <p>但是哪里都感觉不到尤利亚的气息。</p>
+    <p>但是哪里都感觉不到尤利娅的气息。</p>
     <p>即使小心地把短刀扔到椅子上，也只是普通的刺而已。</p>
     <p>好像不是用自己擅长的水镜消失的。</p>
     <p>“<span class="character">……不好吃吧，这个</span>”</p>
