--- a/OEBPS/Text/c095.xhtml
+++ b/OEBPS/Text/c095.xhtml
@@ -14,7 +14,7 @@
     <h1>95. 改善形象</h1>
     <p>“<span class="character">你做了什么？</span>”</p>
     <p>瓦尔堡加夫人的怒声响彻格鲁内瓦特邸的一间房间。</p>
-    <p>被尤利亚巧妙地逃跑了的汉娜就那样去了格鲁内瓦特邸，向有关人员一堂报告了事情的始末。</p>
+    <p>被尤利娅巧妙地逃跑了的汉娜就那样去了格鲁内瓦特邸，向有关人员一堂报告了事情的始末。</p>
     <p>克里斯托夫·战斗是迷宫所有者的事。</p>
     <p>暗杀克里斯托夫的尼班，匿匿着女儿的事。</p>
     <p>那个女孩就是瓦尔堡加，也就是说菲利克斯是迷宫的继承者。</p>
@@ -52,9 +52,9 @@
     <p>“<span class="character">在你看来，这是不正常的失误。做了相当不彻底的事情</span>”</p>
     <p>“<span class="character">……我在反省。不应该活着，应该早点杀掉。</span></p>
     <p><span class="character">这是我的天真所导致的失败</span>”</p>
-    <p>“<span class="character">ククク……你怎么可能有天真呢。是故意的……吧？</span>”</p>
+    <p>“<span class="character">库库库……你怎么可能有天真呢。是故意的……吧？</span>”</p>
     <p>伯恩哈特信以为真地说出的话语让梅赛德斯停下了脚步。</p>
-    <p>“<span class="character">抓住尤利亚这个女人，让他吐露情报的时候，你的选择有两个。</span></p>
+    <p>“<span class="character">抓住尤利娅这个女人，让他吐露情报的时候，你的选择有两个。</span></p>
     <p><span class="character">是杀是活……然后你选择了生存的方法。那是为什么？</span></p>
     <p><span class="character">已经泄露了信息，应该没有什么利用价值了</span>”</p>
     <p>“<span class="character">我犹豫着要杀了。而且有汉娜阿姨这样的专业人士，我觉得应该交给那个判断</span>”</p>
@@ -67,7 +67,7 @@
     <p>“<span class="character">而且，这样对方的动作也变得容易理解了。</span></p>
     <p><span class="character">既然知道了菲利克斯这个对抗马的存在，那些家伙就不能无视它吧。</span></p>
     <p><span class="character">也就是说，已经没有时间去在意你了……菲利克斯是个不错的防弹品</span>”</p>
-    <p>梅赛德斯半途而废地利用了尤利亚，导致了事态的恶化。</p>
+    <p>梅赛德斯半途而废地利用了尤利娅，导致了事态的恶化。</p>
     <p>半吊子的家伙最会使事态恶化……这也是梅赛德斯自己对二班同学的感想。</p>
     <p>但是先说结论，这次的失误全都利于梅赛德斯。</p>
     <p>罗勒已经没有时间去介意梅赛德斯了，这样对方的行动也变得容易理解。</p>
@@ -87,7 +87,7 @@
     <p>最终，总是半途而废的只有梅赛德斯自己。</p>
     <p class="divline"></p>
     <p>罗勒·三文鱼烦恼着。</p>
-    <p>让他烦恼的是回到困境中的尤利亚。</p>
+    <p>让他烦恼的是回到困境中的尤利娅。</p>
     <p>不，准确地说，她带来的信息才是她烦恼的根源。</p>
     <p>尼班的女儿，是克里斯托夫的血统。</p>
     <p>这是最糟糕的展开。</p>
@@ -109,10 +109,10 @@
     <p>与其这样说，如果做那样的仿效马克斯被杀吧。</p>
     <p>如果是伯恩哈特的话绝对会那么做的。因为不顺从自己的迷宫继承者只是碍事。</p>
     <p>到最后，这个报告的真伪原本就不知道。</p>
-    <p>不管怎么说把这个带来的是尤利亚。即使被掌握了谎言信息也不奇怪。</p>
+    <p>不管怎么说把这个带来的是尤利娅。即使被掌握了谎言信息也不奇怪。</p>
     <p>他本人也不知道在隐瞒什么要领，就说‘我没打扰先遣队’、‘和先遣队协助询问情报。完成任务了”等等，重复着让人摸不着头脑的供述。</p>
     <p>不，先遣队是什么？没有出那种东西？</p>
-    <p>完成任务？不，没做啊。莎恩贝尔克夫妇不能活下去啊。</p>
+    <p>完成任务？不，没做啊。莎恩伯格夫妇不能活下去啊。</p>
     <p>恐怕……虽然不知道是怎么骗你的，但这个笨蛋是骗人的。</p>
     <p>我想是这个份儿的话这边的信息也流利地说了。</p>
     <p>（**……为什么这样的事……最后……没有退路……没有大义……！</p>
@@ -123,7 +123,7 @@
     <p>并且使那个成为可能的人……进入！</p>
     <p>但是太冒险了。因为她是个笨蛋……。</p>
     <p>手臂挺立，但脑袋真的不行……。</p>
-    <p>罗勒是颤抖着唯一的希望……我看了尤利亚。</p>
+    <p>罗勒是颤抖着唯一的希望……我看了尤利娅。</p>
     <p>然后我想看她的蠢笨的一面。</p>
     <p>（……不行，把命运托付给这家伙就完了。</p>
     <p>既然如此，就只能用那个……）</p>
