--- a/OEBPS/Text/c096.xhtml
+++ b/OEBPS/Text/c096.xhtml
@@ -22,7 +22,7 @@
     <p>很难确定拥有迷宫的人藏在哪里。</p>
     <p>因为潜藏在口袋中大小小的洞窟钥匙里，所以实际上在任何地方都能藏起来。</p>
     <p>虽说如此，事态也并非没有进展。</p>
-    <p>汉娜依靠从尤利亚那里听到的信息，对被判明是真正的王的贵族和商人怀柔，或者是威胁，让他们从这件事上撒手不管。</p>
+    <p>汉娜依靠从尤利娅那里听到的信息，对被判明是真正的王的贵族和商人怀柔，或者是威胁，让他们从这件事上撒手不管。</p>
     <p>如果时间就这样前进的话，不久后对方就会失去后盾，陷入僵局。</p>
     <p>但是不可能就这样结束……一定，有什么装置要来。</p>
     <p>梅赛德斯是这样想的。</p>
@@ -65,7 +65,7 @@
     <p>再生能力和强度优秀的吸血鬼基本上不会下垂，因此很多女性讨厌睡觉时被束缚的感觉，什么都不能穿。</p>
     <p>这样看来，以前是男装的，真让人吃惊。</p>
     <p>“<span class="character">我接下来要进入殿下的防守了。</span></p>
-    <p><span class="character">其他暂且不谈，尤利亚来的话大概不是我或者梅尔的话不能防御。</span></p>
+    <p><span class="character">其他暂且不谈，尤利娅来的话大概不是我或者梅尔的话不能防御。</span></p>
     <p><span class="character">如果梅尔去王都的话，应该会早点解决的……</span>”</p>
     <p>“<span class="character">……不，我也是留在这里比较好吧。</span></p>
     <p><span class="character">既然不明白敌人的目标，就应该把战斗力集中到最重要的吉克林德防御上</span>”</p>
@@ -78,12 +78,12 @@
     <p><span class="character">作为我来说，比起我更希望保护民众……对了，马上准备吧！</span></p>
     <p><span class="character">即使多一个人也要守护的话</span>”</p>
     <p>“<span class="character">别这样。不要让野鸭背着葱出去</span>”</p>
-    <p>吉克林登似乎是出于强烈的责任感，想亲自出面帮助人们，但并非出乎意料。</p>
+    <p>吉克林德似乎是出于强烈的责任感，想亲自出面帮助人们，但并非出乎意料。</p>
     <p>她确实很有实力，但要说能左右很多人的话，又不是那样的事，完全是那些骑士数人份左右的实力。</p>
     <p>所以即使她出去，情况也不会好转吧。</p>
     <p>“<span class="character">但是只有我被守护着，在这期间无视大家的痛苦……</span>”</p>
     <p>“<span class="character">请忍耐一下</span>”</p>
-    <p>尚也招募的jikurindehana用一句话扔掉了。</p>
+    <p>尚也招募的吉克林德hana用一句话扔掉了。</p>
     <p>不管敌人的目标是什么，只有让吉克林德突击这样的选择。</p>
     <p>公主自己战斗，在游戏中就足够了。</p>
     <p>希望公主能像公主一样守护着。</p>
