--- a/OEBPS/Text/c097.xhtml
+++ b/OEBPS/Text/c097.xhtml
@@ -130,11 +130,11 @@
     <p>背叛……魔物……！？</p>
     <p>指示……谁呢？不，那种事……。</p>
     <p>不，不……在！一个人！很可能干的笨蛋……啊！</p>
-    <p>尤利亚……啊！）</p>
-    <p>为了尤利亚的名誉，她这次真是冤枉。</p>
+    <p>尤利娅……啊！）</p>
+    <p>为了尤利娅的名誉，她这次真是冤枉。</p>
     <p>那个铠甲的魔物，是梅赛德斯将被活捉的魔物放入迷宫登记·复制的复制体。</p>
     <p>但是，只有攻略者才能做到这样的事，罗勒的思考并不适合。</p>
-    <p>他的思考是站在自己一边的麻烦人……他朝着尤利亚失控的方向走去。</p>
+    <p>他的思考是站在自己一边的麻烦人……他朝着尤利娅失控的方向走去。</p>
     <p>以眼还眼，疑神疑鬼则疑神疑鬼。</p>
     <p>巴吉尔翻转的盘面，一瞬间被贝阿列克斯复原了。</p>
 </body>
