--- a/OEBPS/Text/c098.xhtml
+++ b/OEBPS/Text/c098.xhtml
@@ -19,12 +19,12 @@
     <p>真正的王派，没有留下最快的手段。</p>
     <p>强者们纷纷在汉娜的幕后工作中翻身，作为苦肉计策而实行的袭击不知为何以失败告终。</p>
     <p>或许是魔物们吧，袭击的犯人是真正的王派的事到处散布，在国内对马克斯的厌恶程度到最高潮高涨着。</p>
-    <p>不明白意思。明明魔物绝对不会背叛我们的……恐怕，尤利亚一定下达了命令。</p>
+    <p>不明白意思。明明魔物绝对不会背叛我们的……恐怕，尤利娅一定下达了命令。</p>
     <p>100%不会背叛的魔物做出了愚蠢的行动，命令它的人在我方内。</p>
-    <p>因此尤利亚为了不再做多余的事而关在牢里，日后将处刑。</p>
+    <p>因此尤利娅为了不再做多余的事而关在牢里，日后将处刑。</p>
     <p>本人说“<span class="character">我是无辜的！</span>”除了这家伙以外，没有其他傻瓜干了。</p>
     <p></p>
-    <p>因为尤利亚关闭了，再也没有被搅拌的畏惧了。</p>
+    <p>因为尤利娅关闭了，再也没有被搅拌的畏惧了。</p>
     <p>但是已经晚了。到头了。已经结束了。</p>
     <p>民众的感情完全朝向了憎恶马克斯的方向，即使从现在开始夺取了国家，也只能迎来即反叛的末路吧。</p>
     <p>吸血鬼是力量的信奉者。那么，我们还有一种最后的办法就是用力争夺宝座……但是，就算再怎么崇拜强者，袭击自己的王也不崇拜流石。</p>
