--- a/OEBPS/Text/c099.xhtml
+++ b/OEBPS/Text/c099.xhtml
@@ -14,16 +14,16 @@
     <h1>99. 蜘蛛丝</h1>
     <p>梅赛德斯和汉娜进入的储物小屋外面……在那里，围着小屋配置了很多士兵。</p>
     <p>不用说，这是汉娜安排的士兵们。</p>
-    <p>最后，骑乘小型龙的吉克林登在了尾巴上，手持王剑。</p>
+    <p>最后，骑乘小型龙的吉克林德在了尾巴上，手持王剑。</p>
     <p>用吸血鬼喜欢的红和黑的铠甲覆盖全身，胸口用与尺寸相符的特别订购的胸部阿玛被保护。</p>
     <p>我们也接受汉娜的请求出击,不过，那个目的在于消除民众的不满。</p>
-    <p>之前的袭击的时候也变成了浮雕,不过，基本性地orukusu的百姓对jikurinde处于顶点的事感到不安。</p>
+    <p>之前的袭击的时候也变成了浮雕,不过，基本性地奥鲁克斯的百姓对吉克林德处于顶点的事感到不安。</p>
     <p>那是根植于尊重强者的吸血鬼的本能，总之弱王基本上是不受欢迎的。</p>
     <p>就这样，即使毁灭了真正的王派，民众对吉克林德的不满仍在继续。</p>
     <p>怀着这种想法的汉娜决定硬是把奇克林德赶出这次作战。</p>
-    <p>因为那样做的事象jikurinde执行着一样地显示此次的指挥，想给予她『迅速捉住了袭击了王都的逆贼』的实际成果。</p>
+    <p>因为那样做的事象吉克林德执行着一样地显示此次的指挥，想给予她『迅速捉住了袭击了王都的逆贼』的实际成果。</p>
     <p>有了那样的实绩，民众的不满也会有所缓解。</p>
-    <p>总之，到吉克林登找到丈夫新王戴冠为止的时间左右能挣吧。</p>
+    <p>总之，到吉克林德找到丈夫新王戴冠为止的时间左右能挣吧。</p>
     <p>话虽如此，但如果吉克林德发生万一的事就麻烦了，所以配置在最后。</p>
     <p>士兵们筑起墙壁，完全防御着通往基林德的道路。</p>
     <p>更加那个外侧什么与民众聚集，成为防御罗勒们的逃跑的人的墙。</p>
@@ -39,8 +39,8 @@
     <p>于是罗勒一边流着冷汗，一边用温和的笑容对准了马克斯。</p>
     <p>但是那张面具好像已经剥落一般，笑容一直萦绕着。</p>
     <p>心里恐怕会想“不要听那种事。现在岂止如此”。</p>
-    <p>“等着吧！你们一定误会了！</p>
-    <p>我是马克斯·冯·奥尔克斯·战斗！作为正当之王的血统的我不可能是叛逆者！”</p>
+    <p>“<span class="character">等着吧！你们一定误会了！</span></p>
+    <p><span class="character">我是马克斯·冯·奥尔克斯·战斗！作为正当之王的血统的我不可能是叛逆者！</span>”</p>
     <p>瞬间……现场的空气冻结了。</p>
     <p>先不说从梅赛德斯那里听到消息的汉娜，周围的士兵们都聚在一起变成了这个小鬼的脸。</p>
     <p>其中甚至还有人浮现血管，露骨地暴露愤怒。</p>
@@ -48,15 +48,15 @@
     <p>这个少年……是受害者。被罗勒灌输了错误的知识，被利用，自己作为小丑的事也没注意到的小丑。</p>
     <p>现在进行形的黑历史量产机！</p>
     <p>后来知道了真相，长大后他一定会在床上摔倒，痛苦得说不出话来。</p>
-    <p>“民众啊，对不起一直没有露面！但是没关系，从今以后由我来保护国家！</p>
-    <p>今后我们手牵手，一起朝着美好的未来前进吧！”</p>
+    <p>“<span class="character">民众啊，对不起一直没有露面！但是没关系，从今以后由我来保护国家！</span></p>
+    <p><span class="character">今后我们手牵手，一起朝着美好的未来前进吧！</span>”</p>
     <p>马克斯对周围空气的变化没有察觉，继续吐出作为王的话语。</p>
     <p>汉娜看到他的身影，不由得双眼蒙上了。</p>
     <p>梅赛德斯，当真想『再在这里杀一杀会更幸福吧』。</p>
     <p>这是绝对不会想以后自杀的家伙。</p>
     <p>但是为了让这种可怜的小丑更加地跳舞，罗勒说出了这样的话。</p>
-    <p>“王啊，是那个女人！那个女人正是杀死克里斯托夫大人的憎恨仇敌所侍奉的存在！</p>
-    <p>大家都被那家伙骗了！”</p>
+    <p>“<span class="character">王啊，是那个女人！那个女人正是杀死克里斯托夫大人的憎恨仇敌所侍奉的存在！</span></p>
+    <p><span class="character">大家都被那家伙骗了！</span>”</p>
     <p>“<span class="character">ぬう！？那人就是我爷爷……不可原谅！</span>”</p>
     <p>好像在某种程度上也调查过这边的事情。</p>
     <p>正如罗勒所说，汉娜是尼班的前上司。那个地方没错。</p>
@@ -73,8 +73,8 @@
     <p>总之，先斩掉这个男人，事情就能解决了。</p>
     <p>可是罗勒多少对手臂有记忆，从手发出火焰牵制汉娜。</p>
     <p>为了保护罗勒，魔物的数量增加了，为了保护他，马克斯挡住了。</p>
-    <p>“我……不仅是爷爷，就连罗勒的生命也想夺走……。</p>
-    <p>我不会让你做的！我不会原谅我再伤害我重要的人！”</p>
+    <p>“<span class="character">我……不仅是爷爷，就连罗勒的生命也想夺走……。</span></p>
+    <p><span class="character">我不会让你做的！我不会原谅我再伤害我重要的人！</span>”</p>
     <p>罗勒象把猛烈的马克斯做为盾一样地下降。</p>
     <p>那张脸被讨厌的笑容点缀着，‘不能杀掉只是被利用的可怜的孩子吧？’他无言地说道。</p>
     <p>但是对于梅赛德斯来说，迷宫的主人马克斯在前面的情况反而比较方便。</p>
@@ -82,17 +82,17 @@
     <p>所以毫不犹豫地踏入，一闪劈开铠甲的魔物，打开通往马克斯的道路。</p>
     <p>在二闪中铠甲更是破碎飞出，刀尖掠过马克斯的眼前。</p>
     <p>马克斯对出生以来第一次被转向的杀意屏住呼吸，脸色发青。</p>
-    <p>“等着吧！我们没有争吵的理由！</p>
-    <p>坏人是那里的女人，我们不是敌人！睁开眼睛！你被利用了！”</p>
+    <p>“<span class="character">等等！我们没有争吵的理由！</span></p>
+    <p><span class="character">坏人是那里的女人，我们不是敌人！睁开眼睛！你被利用了！</span>”</p>
     <p>“<span class="character">这样啊</span>”</p>
     <p>可怜的孩子……话虽如此，毕竟还是有些刺耳了。</p>
     <p>总之，为了让他沉默，使其无力化，至少把一只胳膊摔下去也没关系吧。</p>
     <p>杀人是……不，杀人到底是不好吃吗？</p>
     <p>毕竟是菲利克斯的堂弟，而且在这么多人面前杀掉孩子，以后会留下不好的印象。</p>
     <p>所以暂且先拿出本事……拿着迷宫钥匙的手臂掉落，夺走迷宫。</p>
-    <p>然后关掉罗勒，马克斯的待遇交给国家就可以了。</p>
-    <p>“ゆ、ゆけ！魔物们啊！把那个女人打败！</p>
-    <p>但是绝对不能让你死！”</p>
+    <p>然后杀掉罗勒，马克斯的待遇交给国家就可以了。</p>
+    <p>“<span class="character">ゆ、ゆけ！魔物们啊！把那个女人打败！</span></p>
+    <p><span class="character">但是绝对不能让你死！</span>”</p>
     <p>马克斯的命令使更多的魔物涌出。</p>
     <p>它们究竟拥有相当大的力量呢。</p>
     <p>但是在梅赛德斯的面前简直就像杂鱼一样。</p>
@@ -102,7 +102,7 @@
     <p>但是工具毕竟是工具。根据使用者的不同怎么也变化了。</p>
     <p>和梅赛德斯的使用方法不如贝阿列克斯一样，马克斯的迷宫的处理远远低于梅赛德斯。</p>
     <p>只是逐一投入看起来强的魔物，简直不成话。</p>
-    <p>这样的话，只有尤利亚一个人更厉害。</p>
+    <p>这样的话，只有尤利娅一个人更厉害。</p>
     <p>但是，罗勒可能还有什么办法，虽然很慌张，但还是向马克斯下达了下一步的指示。</p>
     <p>不过，那也不是什么大手段吧。</p>
     <p>说起来就像是充满痛苦的蜘蛛丝。梅赛德斯这样想。</p>
@@ -122,18 +122,18 @@
     <p>恐怕是之前袭击的时候，作为保险绑架了几个孩子的吧。</p>
     <p>马克斯眼睁睁地看着事态是不是被吞没了，周围的士兵们都怒声高涨。</p>
     <p>对那些声音置若罔闻，罗勒露出了从容的笑容。</p>
-    <p>“呵呵……让我们做生意吧。</p>
-    <p>请你就这样放过我们吧……那么这些孩子就还给你。</p>
-    <p>还有，在迷宫里还有其他被囚禁的可怜的孩子们，不推荐任由愤怒来攻击我”</p>
+    <p>“<span class="character">呵呵……让我们做生意吧。</span></p>
+    <p><span class="character">请你就这样放过我们吧……那么这些孩子就还给你。</span></p>
+    <p><span class="character">还有，在迷宫里还有其他被囚禁的可怜的孩子们，不推荐任由愤怒来攻击我</span>”</p>
     <p>“<span class="character">做了很过分的事情。我跟这些孩子相识也算不了什么……如果就这样不管攻击的话怎么办？</span>”</p>
     <p>汉娜对罗勒露出若干愤怒询问。</p>
     <p>因为她也有天真的部分，这样的手段不太好吧。</p>
     <p>如果还需要的话就做吧……如果可以的话我会想帮助你的。</p>
     <p>另一方面，梅赛德斯，因为想在这里逃跑的话人质象告诉有效一样的东西不管攻击。</p>
     <p>如果进展顺利的话，在人质被杀之前就能够完成任务。</p>
-    <p>“到时候请让我看一下两个人。</p>
-    <p>我也很心痛，但这也是为了我王……啊，但是我也不是想杀死孩子们。只要你们放过我，我保证你们平安无事。</p>
-    <p>明白吧？杀掉这些孩子们的不是我。是你们。你们的选择就是杀人”</p>
+    <p>“<span class="character">到时候请让我看一下两个人。</span></p>
+    <p><span class="character">我也很心痛，但这也是为了我王……啊，但是我也不是想杀死孩子们。只要你们放过我，我保证你们平安无事。</span></p>
+    <p><span class="character">明白吧？杀掉这些孩子们的不是我。是你们。你们的选择就是杀人</span>”</p>
     <p>罗勒骄傲地说。</p>
     <p>梅赛德斯与这样的他，然后对比一下终于掌握了事态的马克斯……并且，为了丢落二人的头稍微成为了前倾姿势。</p>
     <p>已经取了人质····以上，已经不需要介意来自周围的印象的降低。</p>
