--- a/OEBPS/Text/c100.xhtml
+++ b/OEBPS/Text/c100.xhtml
@@ -107,7 +107,7 @@
     <p>对于和平时不一样的梅赛德斯的态度，吉林顿想起了周围的目光，回答说是公主。</p>
     <p>这样的话，最终吉克林德勒紧了的印象在人们之间蔓延吧。</p>
     <p>梅赛德斯老老实实地遵从的事显示吉克林德的影响力，由于这个梅赛德斯的功绩也成为吉克林德的指挥的赏物。</p>
-    <p>吉克林德恐怕也注意到了他的功绩被强加于人的事情，但是不能在这里指出来。</p>
+    <p>吉克林德恐怕也注意到了她的功绩被强加于人的事情，但是不能在这里指出来。</p>
     <p>事后肯定会发很多牢骚，不过这也是没办法的吧。</p>
     <p>梅赛德斯一边看着吉克林德救出人质，拘留马克斯，一边脱离了人的圈子。</p>
 </body>
