--- a/OEBPS/Text/c102.xhtml
+++ b/OEBPS/Text/c102.xhtml
@@ -34,17 +34,17 @@
     <p>幸存下来的马克斯暂且放在梅赛德斯的迷宫内，让最近没有出场的本凯和舒夫进行教育。</p>
     <p>暂且，根据罗勒被告诉吧如果弄好歪曲了的思想不知不觉外出的事说不定也能。</p>
     <p>“<span class="character">……因此，从今往后我要在这里生活</span>”</p>
-    <p>梅赛德斯决定在自己所拥有的斯塔克迷宫内新建住宅，在那里让马克斯和尤利亚居住。</p>
+    <p>梅赛德斯决定在自己所拥有的斯塔克迷宫内新建住宅，在那里让马克斯和尤利娅居住。</p>
     <p>作为仆人配置着蟑螂，生活不辛苦吧。</p>
-    <p>要说为什么要到尤利亚，那是因为汉娜对她的待遇感到为难。</p>
+    <p>要说为什么要到尤利娅，那是因为汉娜对她的待遇感到为难。</p>
     <p>并不是犯了处刑那样的罪，但是放任不管太危险。</p>
     <p>而且即使很拙劣的拘束，也有可能逃脱。</p>
     <p>加上，因为只有能力被逃跑了一次的话不明白做完什么。</p>
-    <p>所以汉娜对尤利亚的待遇感到为难，得知此事的梅赛德斯提议收留尤利亚。</p>
+    <p>所以汉娜对尤利娅的待遇感到为难，得知此事的梅赛德斯提议收留尤利娅。</p>
     <p>如果关在迷宫里的话，如果没有梅赛德斯的同意是不能逃走的，这正是最合适的隔离场所。</p>
-    <p>当然，梅赛德斯也不仅仅是出于善意收留了尤利亚。</p>
-    <p>头脑的遗憾姑且不论，尤利亚的体术和魔法有利用价值。</p>
-    <p>正是因为那样想，才把尤利亚收回来的。</p>
+    <p>当然，梅赛德斯也不仅仅是出于善意收留了尤利娅。</p>
+    <p>头脑的遗憾姑且不论，尤利娅的体术和魔法有利用价值。</p>
+    <p>正是因为那样想，才把尤利娅收回来的。</p>
     <p>总之，把本凯当成教师，把空头稍微好一点就能用了吧。</p>
     <p>这个和这个无关紧要，但是贝阿朵莉克斯是以前她为主的迷宫……因为很麻烦，所以叫他帝国迷宫吧。我在那边盖房子。</p>
     <p>“<span class="character">哦，你是迷宫的继承人吗……</span>”</p>
