--- a/OEBPS/Text/c123.xhtml
+++ b/OEBPS/Text/c123.xhtml
@@ -81,7 +81,7 @@
     <p>但是，梅赛德斯并没有迷路。从一开始就没有黄金之门。</p>
     <p>“<span class="character">选择的是黑色的门。</span>”</p>
     <p>所以我选择了黑色的门，然后走进了打开的门。</p>
-    <p>之后是皮可、多米尼翁和尤利亚。</p>
+    <p>之后是皮可、多米尼翁和尤利娅。</p>
     <p>就这样前进了一段时间后，梅赛德斯他们终于到达了试炼前。</p>
     <p>那里和梅赛德斯预想的一样是没有立足之地的空中。</p>
     <p>通往门的通道在试炼之间中断了，前方没有任何立足点。</p>
