--- a/OEBPS/Text/c125.xhtml
+++ b/OEBPS/Text/c125.xhtml
@@ -14,7 +14,7 @@
     <h1>125. 名为才能的咒缚</h1>
 
     <p>面对在眼前微笑的少女，梅赛德斯立即转换了混乱的思考。</p>
-    <p>是女人的事感到吃惊，也有到这里以接近人的外表魔物怎样的心情。脱下铠甲的多米尼昂比吸血鬼和精灵更接近霍莫·萨皮恩斯。</p>
+    <p>是女人的事感到吃惊，也有到这里以接近人的外表魔物怎样的心情。脱下铠甲的多米尼昂比吸血鬼和精灵更接近智人种。</p>
     <p>也不知道多米尼昂这种物种是全部都是这样，还是多米尼昂也有男女差别。</p>
     <p>但是，那种事以后再问就好了。现在不是在意的事。</p>
     <p class="divline"></p>
