--- a/OEBPS/Text/c126.xhtml
+++ b/OEBPS/Text/c126.xhtml
@@ -98,7 +98,7 @@
     <p></p>
     <p></p>
     <p>对芬尼克斯没有兴趣了。</p>
-    <p>他漫不经心地回到尤利亚身边，穿过了试炼之间。</p>
+    <p>他漫不经心地回到尤利娅身边，穿过了试炼之间。</p>
     <p>再往前就是位于迷宫最深处的怪物复制室。</p>
     <p>树木中央镶嵌着圆形水槽，里面沉睡着魔物。</p>
     <p>第一次看到这样的景象，尤利娅和多米尼安惊讶地环视四周，但梅赛德斯已经习惯了。</p>
