--- a/OEBPS/Text/c028.xhtml
+++ b/OEBPS/Text/c028.xhtml
@@ -103,7 +103,7 @@
     <p>这个世界的语言多种多样，例如只使用吸血鬼的语言，在这个国家也使用的orux语以外有各种各样的语言，那个数超过十。</p>
     <p>由于象雪橇和forgera也象同样一样的东西，完全没做语言的统一化。</p>
     <p>但是只有精灵不同。他们虽然是这个世界上最繁荣的法鲁什，但语言却完全统一了。</p>
-    <p>譬如即使能说orukusu语，去了其他的国家同样的吸血鬼也有话不通的事。</p>
+    <p>譬如即使能说奥鲁克斯语，去了其他的国家同样的吸血鬼也有话不通的事。</p>
     <p>但是精灵不是那样的。只要掌握了精灵语，就一定能沟通。</p>
     <p>因此精灵语的通用性很高，在精灵以外的法鲁什，行会的职员等也经常记得精灵语。</p>
     <p>即使去了语言不通的异国，只要掌握了精灵语，就有可能实现。</p>
