--- a/OEBPS/Text/c045.xhtml
+++ b/OEBPS/Text/c045.xhtml
@@ -30,8 +30,8 @@
     <p>一脸轮廓清晰。可是奇特的打扮毁坏着好不容易角度的素材。</p>
     <p>骑着男子的马在迷茫的梅赛德斯面前停了下来，把男子甩了下去。</p>
     <p>被掉落的男子以崩溃的Elka般的姿势倒在了地上,不过，马上站起来俯视梅赛德斯。</p>
-    <p>“<span class="character">小丫头。你是梅赛德斯·格鲁内瓦特吧？我是吉克斯图斯·谢恩贝尔克。</span></p>
-    <p><span class="character">作为谢恩贝尔克侯爵家的长子，迟早要继承谢恩贝尔克领地的男人哟。</span></p>
+    <p>“<span class="character">小丫头。你是梅赛德斯·格鲁内瓦特吧？我是吉克斯图斯·莎恩伯格。</span></p>
+    <p><span class="character">作为莎恩伯格侯爵家的长子，迟早要继承莎恩伯格领地的男人哟。</span></p>
     <p><span class="character">年龄是今年二十岁！因为品行恶劣而留级两次！</span>”</p>
     <p>又来奇怪了……。</p>
     <p>梅赛德斯一边这么想着，一边用冷漠的眼神观察着男子。</p>
@@ -51,7 +51,7 @@
     <p>于是，吉克斯图斯眼睛看得见失落，走到食堂的角落时，就坐在了那里。</p>
     <p>原以为他是个大胆的人，没想到突然一变，心慌意乱，很郁闷。</p>
     <p>于是，周围的人慌张地说。</p>
-    <p>“<span class="character">啊，吉克斯图斯先生又失落了！</span>”</p>
+    <p>“<span class="character">啊，吉克斯图斯大人又失落了！</span>”</p>
     <p>“<span class="character">干什么呢！那个吸血鬼人，虽然是笨蛋，但是被打到的很弱！</span>”</p>
     <p>“<span class="character">对了！虽然是笨蛋！</span>”</p>
     <p>“<span class="character">虽然很有品位，但很纤细！</span>”</p>
@@ -61,7 +61,7 @@
     <p>果然侯爵家长男的名字是如此之大。</p>
     <p>不管怎样，不想被当成那样的朋友，即使今后万一有加入某个派系的事，也发誓要避免。</p>
     <p>最重要的是制服很土。</p>
-    <p>“<span class="character">吉克斯图斯先生，果然那个头盔不行啊。就扔了吧</span>”</p>
+    <p>“<span class="character">吉克斯图斯大人，果然那个头盔不行啊。就扔了吧</span>”</p>
     <p>“<span class="character">你说什么！这是从古文献中发现的由来神的发型！天马座的升天盛况！</span>”</p>
     <p>“<span class="character">因为发量不够，所以做成头盔之前有那个必要吗？换个颜色吧</span>”</p>
     <p>无视缠绕和相声渗透的交换的吉克斯图斯把饭吃光，把餐具交给食堂的阿姨。</p>
